--- a/templates/account/dashboard/user_wish_list.html
+++ b/templates/account/dashboard/user_wish_list.html
@@ -4,6 +4,13 @@
 
 {% block sub_content %}
 <div class="col-12 mx-auto">
+{% if messages %}
+<div class="alert alert-warning" alert-"{{ message.tags }}" role="alert">
+{% for message in messages  %}
+  {{message|safe}}
+{% endfor %}
+</div>
+{% endif %}
   <h1 class="h3">My Wishlist</h1>
   <div>Manage your Wishlist</div>
   <hr />
