--- a/templates/account/dashboard/edit_details.html
+++ b/templates/account/dashboard/edit_details.html
@@ -4,7 +4,7 @@
 
 <div class="col-6 mx-aut0">
 <form class="account-form" method="post" enctype="multipart/form-data">
-    {% if user_form.is_valid %}
+    {% if form.is_valid %}
     <div class="alert alert-primary" role="alert">
         Details successfully updated!
     </div>
@@ -21,10 +21,10 @@
     </div>
     {% endif %}
     {% csrf_token %}
-    <label class="small font-weight-bold">{{ user_form.email.label}}</label>
-    {{ user_form.email }}
-    <label class="small font-weight-bold">{{ user_form.name.label}}</label>
-    {{ user_form.name }}
+    <label class="small font-weight-bold">{{ form.email.label}}</label>
+    {{ form.email }}
+    <label class="small font-weight-bold">{{ form.name.label}}</label>
+    {{ form.name }}
     <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw-bold w-100" type="submit" value="Save changes">Save
         Changes</button>
     <hr class="mb-3">
